Trying to fix weird body-overlapping-project-images thing on the live website. It's fine in Codepen, but now we're making it hackey

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ nav a:hover {
    display: inline-block;
    position: relative;
    overflow: hidden;
-   float: left;
+   margin-right: -4px;
+   margin-bottom: -4px;
    z-index: -1;
    line-height: 0px;
 }
